# BCH_server

./: CLAUDE.md  Direct_record_and_save_sound.py  Hello_from_stm.py  Project_desciption.md  README.md  Sound_data.py  UDP_test.py  audio-diagnostic-tool.py  audio_data.txt  continuous-receiver.py  echo.py  mathias_kode  pyproject.toml  realtime_sound.py  recording.py  sample-rate-detector.py  simple-reliable-receiver.py  sound_diagnostics.py  sound_visualizer.py  tempCodeRunnerFile.py  test.py  wav-recorder.py  windows_listener.py
app/: __init__.py  main.py
app/data/: __init__.py  storage.py
app/frontend/: __init__.py  dashboard.py
app/models/: sensor_data.py
app/utils/: udp_listener.py
